--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,27 @@
 /venv/
-/blackjack/__pycache__/
-/blackjack/migrations/__pycache__/
-/blackjack/migrations/0001_initial.py
+
+# Fichiers Python compilés
+*.pyc
+__pycache__/
+
+# Base de données
 /db.sqlite3
+
+# Migrations Django
+/blackjack/migrations/*.py
+/blackjack/migrations/*.pyc
+/blackjack/migrations/__pycache__/
+
+# Node modules (frontend)
 /node_modules/
+
+# Build frontend
+/front/dist/
+
+# Fichiers et dossiers IDE
+.vscode/
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
